// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`array integration 1 1`] = `
{
  "posts": {
    "nodeType": "layout",
    "component": "body",
    "childrenName": "[posts]",
    "hocs": "[containerRouter]",
    "children": [
      {
        "nodeType": "layout",
        "component": "block",
        "childrenName": "[posts]",
        "children": [
          {
            "nodeType": "plugins.array.table",
            "keyName": "posts",
            "hocs": "[withTitleAndDescription,withRequest,relation,miniApp,withRoute,query,routeMiniApp,connectId]",
            "children": [
              {
                "nodeType": "layout",
                "component": "block",
                "childrenName": "[status]",
                "hocs": "[containerRouter]",
                "children": [
                  {
                    "nodeType": "plugins.object.fieldset",
                    "keyName": "status",
                    "hocs": "[validator,withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
                    "children": [
                      {
                        "nodeType": "layout",
                        "component": "block",
                        "childrenName": "[isDraft]",
                        "hocs": "[containerRouter]",
                        "children": [
                          {
                            "nodeType": "plugins.boolean.switch",
                            "keyName": "isDraft",
                            "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                          }
                        ]
                      }
                    ]
                  }
                ]
              }
            ]
          }
        ]
      }
    ]
  }
}
`;

exports[`array integration 2 1`] = `
{
  "posts": {
    "nodeType": "layout",
    "component": "body",
    "childrenName": "[posts]",
    "hocs": "[containerRouter]",
    "children": [
      {
        "nodeType": "layout",
        "component": "block",
        "childrenName": "[posts]",
        "children": [
          {
            "nodeType": "plugins.array.table",
            "keyName": "posts",
            "hocs": "[withTitleAndDescription,withRequest,relation,miniApp,withRoute,query,routeMiniApp,connectId]",
            "children": [
              {
                "nodeType": "layout",
                "component": "block",
                "childrenName": "[content,buttons,otherinfo]",
                "hocs": "[containerRouter]",
                "children": [
                  {
                    "nodeType": "plugins.string.input",
                    "keyName": "content",
                    "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                  },
                  {
                    "nodeType": "plugins.object.fieldset",
                    "keyName": "buttons",
                    "hocs": "[validator,withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
                    "children": [
                      {
                        "nodeType": "plugins.boolean.switch",
                        "keyName": "isDraft",
                        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                      }
                    ]
                  },
                  {
                    "nodeType": "plugins.object.fieldset",
                    "keyName": "otherinfo",
                    "hocs": "[validator,withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
                    "children": [
                      {
                        "nodeType": "plugins.string.input",
                        "keyName": "address",
                        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                      },
                      {
                        "nodeType": "plugins.string.input",
                        "keyName": "introduction",
                        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                      }
                    ]
                  }
                ]
              }
            ]
          }
        ]
      }
    ]
  }
}
`;

exports[`complex schema integration 1 1`] = `
{
  "posts": {
    "nodeType": "layout",
    "component": "body",
    "childrenName": "[posts]",
    "hocs": "[containerRouter]",
    "children": [
      {
        "nodeType": "layout",
        "component": "block",
        "childrenName": "[posts]",
        "children": [
          {
            "nodeType": "plugins.array.table",
            "keyName": "posts",
            "hocs": "[withTitleAndDescription,withRequest,relation,miniApp,withRoute,query,routeMiniApp,connectId]",
            "children": [
              {
                "nodeType": "layout",
                "component": "block",
                "childrenName": "[featureImage]",
                "hocs": "[containerRouter]",
                "children": [
                  {
                    "nodeType": "plugins.string.input",
                    "keyName": "featureImage",
                    "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                  }
                ]
              },
              {
                "nodeType": "layout",
                "component": "block",
                "childrenName": "[status]",
                "hocs": "[containerRouter]",
                "children": [
                  {
                    "nodeType": "plugins.object.fieldset",
                    "keyName": "status",
                    "hocs": "[validator,withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
                    "children": [
                      {
                        "nodeType": "plugins.dateTime.dateTime",
                        "keyName": "createAt",
                        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                      },
                      {
                        "nodeType": "plugins.number.input",
                        "keyName": "draft",
                        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                      }
                    ]
                  }
                ]
              },
              {
                "nodeType": "layout",
                "component": "block",
                "childrenName": "[pageProperty]",
                "hocs": "[containerRouter]",
                "children": [
                  {
                    "nodeType": "plugins.object.fieldset",
                    "keyName": "pageProperty",
                    "hocs": "[validator,withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
                    "children": [
                      {
                        "nodeType": "plugins.number.input",
                        "keyName": "onTop",
                        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                      },
                      {
                        "nodeType": "plugins.number.input",
                        "keyName": "order",
                        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                      }
                    ]
                  }
                ]
              },
              {
                "nodeType": "layout",
                "component": "block",
                "childrenName": "[share]",
                "hocs": "[containerRouter]",
                "children": [
                  {
                    "nodeType": "plugins.object.fieldset",
                    "keyName": "share",
                    "hocs": "[validator,withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
                    "children": [
                      {
                        "nodeType": "plugins.number.input",
                        "keyName": "showShareBottom",
                        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                      },
                      {
                        "nodeType": "plugins.number.input",
                        "keyName": "showGoodBottom",
                        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                      }
                    ]
                  }
                ]
              },
              {
                "nodeType": "layout",
                "component": "block",
                "childrenName": "[other]",
                "hocs": "[containerRouter]",
                "children": [
                  {
                    "nodeType": "plugins.object.fieldset",
                    "keyName": "other",
                    "hocs": "[validator,withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
                    "children": [
                      {
                        "nodeType": "plugins.string.input",
                        "keyName": "introduction",
                        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                      },
                      {
                        "nodeType": "plugins.geoPoint.default",
                        "keyName": "position",
                        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                      }
                    ]
                  }
                ]
              }
            ]
          }
        ]
      }
    ]
  },
  "info": {
    "nodeType": "layout",
    "component": "body",
    "childrenName": "[info]",
    "hocs": "[containerRouter]",
    "children": [
      {
        "nodeType": "plugins.object.fieldset",
        "keyName": "info",
        "hocs": "[validator,withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
        "children": [
          {
            "nodeType": "layout",
            "component": "block",
            "childrenName": "[name,description]",
            "hocs": "[containerRouter]",
            "children": [
              {
                "nodeType": "plugins.string.input",
                "keyName": "name",
                "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
              },
              {
                "nodeType": "plugins.string.input",
                "keyName": "description",
                "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
              }
            ]
          },
          {
            "nodeType": "plugins.object.fieldset",
            "keyName": "info",
            "hocs": "[validator,withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
            "children": [
              {
                "nodeType": "plugins.object.fieldset",
                "keyName": "info2",
                "hocs": "[validator,withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
                "children": [
                  {
                    "nodeType": "plugins.string.input",
                    "keyName": "name2",
                    "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                  }
                ]
              }
            ]
          }
        ]
      }
    ]
  },
  "popup": {
    "nodeType": "layout",
    "component": "body",
    "childrenName": "[popup]",
    "hocs": "[containerRouter]",
    "children": [
      {
        "nodeType": "layout",
        "component": "block",
        "childrenName": "[popup]",
        "children": [
          {
            "nodeType": "plugins.array.table",
            "keyName": "popup",
            "hocs": "[withTitleAndDescription,withRequest,relation,miniApp,withRoute,query,routeMiniApp,connectId]",
            "children": [
              {
                "nodeType": "layout",
                "component": "block",
                "childrenName": "[name]",
                "hocs": "[containerRouter]",
                "children": [
                  {
                    "nodeType": "plugins.string.input",
                    "keyName": "name",
                    "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                  }
                ]
              }
            ]
          }
        ]
      }
    ]
  },
  "tab": {
    "nodeType": "layout",
    "component": "body",
    "childrenName": "[tab]",
    "hocs": "[containerRouter]",
    "children": [
      {
        "nodeType": "layout",
        "component": "block",
        "childrenName": "[tab]",
        "children": [
          {
            "nodeType": "plugins.array.tab",
            "keyName": "tab",
            "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
            "children": [
              {
                "nodeType": "layout",
                "component": "block",
                "childrenName": "[name]",
                "hocs": "[containerRouter]",
                "children": [
                  {
                    "nodeType": "plugins.string.input",
                    "keyName": "name",
                    "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                  }
                ]
              }
            ]
          }
        ]
      }
    ]
  },
  "undefined": {
    "nodeType": "layout",
    "component": "body",
    "childrenName": "[undefined]",
    "hocs": "[containerRouter]",
    "children": [
      {
        "nodeType": "layout",
        "component": "block",
        "childrenName": "[undefined]",
        "children": [
          {
            "nodeType": "plugins.array.table",
            "hocs": "[withTitleAndDescription,withRequest,relation,miniApp,withRoute,query,routeMiniApp,connectId]",
            "children": [
              {
                "nodeType": "layout",
                "component": "block",
                "childrenName": "[name]",
                "hocs": "[containerRouter]",
                "children": [
                  {
                    "nodeType": "plugins.string.input",
                    "keyName": "name",
                    "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                  }
                ]
              }
            ]
          }
        ]
      }
    ]
  }
}
`;

exports[`complex schema integration 2 1`] = `
{
  "info": {
    "nodeType": "layout",
    "component": "body",
    "childrenName": "[info]",
    "hocs": "[containerRouter]",
    "children": [
      {
        "nodeType": "plugins.object.fieldset",
        "keyName": "info",
        "hocs": "[validator,withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
        "children": [
          {
            "nodeType": "layout",
            "component": "block",
            "childrenName": "[name,test,thumbnail,contactInfo]",
            "hocs": "[containerRouter]",
            "children": [
              {
                "nodeType": "layout",
                "component": "block",
                "keyName": "name",
                "childrenName": "[name,nickname]",
                "hocs": "[containerRouter]",
                "children": [
                  {
                    "nodeType": "plugins.string.input",
                    "keyName": "name",
                    "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                  },
                  {
                    "nodeType": "plugins.string.input",
                    "keyName": "nickname",
                    "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                  }
                ]
              },
              {
                "nodeType": "plugins.string.input",
                "keyName": "test",
                "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
              },
              {
                "nodeType": "plugins.object.fieldset",
                "keyName": "thumbnail",
                "hocs": "[validator,withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
                "children": [
                  {
                    "nodeType": "plugins.string.input",
                    "keyName": "imageName",
                    "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                  },
                  {
                    "nodeType": "plugins.file.file",
                    "keyName": "imageSrc",
                    "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                  }
                ]
              },
              {
                "nodeType": "plugins.object.fieldset",
                "keyName": "contactInfo",
                "hocs": "[validator,withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
                "children": [
                  {
                    "nodeType": "plugins.array.table",
                    "keyName": "phones",
                    "hocs": "[withTitleAndDescription,withRequest,relation,miniApp,withRoute,withQuery,routeMiniApp,connectId]",
                    "children": [
                      {
                        "nodeType": "plugins.string.select",
                        "keyName": "type",
                        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                      },
                      {
                        "nodeType": "plugins.string.input",
                        "keyName": "value",
                        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                      }
                    ]
                  },
                  {
                    "nodeType": "plugins.array.table",
                    "keyName": "addresses",
                    "hocs": "[withTitleAndDescription,withRequest,relation,miniApp,withRoute,withQuery,routeMiniApp,connectId]",
                    "children": [
                      {
                        "nodeType": "plugins.string.select",
                        "keyName": "type",
                        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                      },
                      {
                        "nodeType": "plugins.string.input",
                        "keyName": "value",
                        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                      }
                    ]
                  },
                  {
                    "nodeType": "plugins.array.table",
                    "keyName": "emails",
                    "hocs": "[withTitleAndDescription,withRequest,relation,miniApp,withRoute,withQuery,routeMiniApp,connectId]",
                    "children": [
                      {
                        "nodeType": "plugins.string.select",
                        "keyName": "type",
                        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                      },
                      {
                        "nodeType": "plugins.string.input",
                        "keyName": "value",
                        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                      }
                    ]
                  }
                ]
              }
            ]
          }
        ]
      }
    ]
  }
}
`;

exports[`integration with qa-compiler, test object 
  integration 6 1`] = `
{
  "info": {
    "nodeType": "layout",
    "component": "body",
    "childrenName": "[info]",
    "hocs": "[containerRouter]",
    "children": [
      {
        "nodeType": "plugins.object.fieldset",
        "keyName": "info",
        "hocs": "[validator,withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
        "children": [
          {
            "nodeType": "layout",
            "component": "block",
            "childrenName": "[info1]",
            "hocs": "[containerRouter]",
            "children": [
              {
                "nodeType": "plugins.object.fieldset",
                "keyName": "info1",
                "hocs": "[validator,withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
                "children": [
                  {
                    "nodeType": "layout",
                    "component": "block",
                    "childrenName": "[info2]",
                    "hocs": "[containerRouter]",
                    "children": [
                      {
                        "nodeType": "plugins.object.fieldset",
                        "keyName": "info2",
                        "hocs": "[validator,withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
                        "children": [
                          {
                            "nodeType": "plugins.string.input",
                            "keyName": "name3",
                            "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                          }
                        ]
                      }
                    ]
                  }
                ]
              }
            ]
          }
        ]
      }
    ]
  }
}
`;

exports[`integration with qa-compiler, test object integration 1 1`] = `
{
  "info": {
    "nodeType": "layout",
    "component": "body",
    "childrenName": "[info]",
    "hocs": "[containerRouter]",
    "children": [
      {
        "nodeType": "plugins.object.fieldset",
        "keyName": "info",
        "hocs": "[validator,withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
        "children": [
          {
            "nodeType": "layout",
            "component": "block",
            "childrenName": "[name]",
            "hocs": "[containerRouter]",
            "children": [
              {
                "nodeType": "plugins.string.input",
                "keyName": "name",
                "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
              }
            ]
          }
        ]
      }
    ]
  }
}
`;

exports[`integration with qa-compiler, test object integration 2 1`] = `
{
  "info": {
    "nodeType": "layout",
    "component": "body",
    "childrenName": "[info]",
    "hocs": "[containerRouter]",
    "children": [
      {
        "nodeType": "plugins.object.fieldset",
        "keyName": "info",
        "hocs": "[validator,withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
        "children": [
          {
            "nodeType": "layout",
            "component": "block",
            "childrenName": "[name]",
            "hocs": "[containerRouter]",
            "children": [
              {
                "nodeType": "plugins.string.input",
                "keyName": "name",
                "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
              }
            ]
          },
          {
            "nodeType": "plugins.string.input",
            "keyName": "nickname",
            "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
          }
        ]
      }
    ]
  }
}
`;

exports[`integration with qa-compiler, test object integration 3 1`] = `
{
  "info": {
    "nodeType": "layout",
    "component": "body",
    "childrenName": "[info]",
    "hocs": "[containerRouter]",
    "children": [
      {
        "nodeType": "plugins.object.fieldset",
        "keyName": "info",
        "hocs": "[validator,withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
        "children": [
          {
            "nodeType": "layout",
            "component": "block",
            "childrenName": "[name,nickname]",
            "hocs": "[containerRouter]",
            "children": [
              {
                "nodeType": "plugins.string.input",
                "keyName": "name",
                "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
              },
              {
                "nodeType": "plugins.string.input",
                "keyName": "nickname",
                "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
              }
            ]
          }
        ]
      }
    ]
  }
}
`;

exports[`integration with qa-compiler, test object integration 4 1`] = `
{
  "info": {
    "nodeType": "layout",
    "component": "body",
    "childrenName": "[info]",
    "hocs": "[containerRouter]",
    "children": [
      {
        "nodeType": "plugins.object.fieldset",
        "keyName": "info",
        "hocs": "[validator,withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
        "children": [
          {
            "nodeType": "layout",
            "component": "block",
            "childrenName": "[info1]",
            "hocs": "[containerRouter]",
            "children": [
              {
                "nodeType": "plugins.object.fieldset",
                "keyName": "info1",
                "hocs": "[validator,withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
                "children": [
                  {
                    "nodeType": "plugins.string.input",
                    "keyName": "name",
                    "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                  }
                ]
              }
            ]
          }
        ]
      }
    ]
  }
}
`;

exports[`integration with qa-compiler, test object integration 5 1`] = `
{
  "info": {
    "nodeType": "layout",
    "component": "body",
    "childrenName": "[info]",
    "hocs": "[containerRouter]",
    "children": [
      {
        "nodeType": "plugins.object.fieldset",
        "keyName": "info",
        "hocs": "[validator,withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
        "children": [
          {
            "nodeType": "layout",
            "component": "block",
            "childrenName": "[info1]",
            "hocs": "[containerRouter]",
            "children": [
              {
                "nodeType": "plugins.object.fieldset",
                "keyName": "info1",
                "hocs": "[validator,withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
                "children": [
                  {
                    "nodeType": "layout",
                    "component": "block",
                    "childrenName": "[name]",
                    "hocs": "[containerRouter]",
                    "children": [
                      {
                        "nodeType": "plugins.string.input",
                        "keyName": "name",
                        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                      }
                    ]
                  }
                ]
              }
            ]
          }
        ]
      }
    ]
  }
}
`;

exports[`integration with qa-compiler, test object integration 7 1`] = `
{
  "info": {
    "nodeType": "layout",
    "component": "body",
    "childrenName": "[info]",
    "hocs": "[containerRouter]",
    "children": [
      {
        "nodeType": "plugins.object.fieldset",
        "keyName": "info",
        "hocs": "[validator,withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
        "children": [
          {
            "nodeType": "layout",
            "component": "block",
            "childrenName": "[name,description]",
            "hocs": "[containerRouter]",
            "children": [
              {
                "nodeType": "plugins.string.input",
                "keyName": "name",
                "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
              },
              {
                "nodeType": "plugins.string.input",
                "keyName": "description",
                "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
              }
            ]
          },
          {
            "nodeType": "plugins.object.fieldset",
            "keyName": "info",
            "hocs": "[validator,withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
            "children": [
              {
                "nodeType": "plugins.object.fieldset",
                "keyName": "info2",
                "hocs": "[validator,withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
                "children": [
                  {
                    "nodeType": "plugins.string.input",
                    "keyName": "name2",
                    "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                  }
                ]
              }
            ]
          }
        ]
      }
    ]
  }
}
`;

exports[`integration with qa-compiler, test object integration 8 1`] = `
{
  "info": {
    "nodeType": "layout",
    "component": "body",
    "childrenName": "[info]",
    "hocs": "[containerRouter]",
    "children": [
      {
        "nodeType": "plugins.object.fieldset",
        "keyName": "info",
        "hocs": "[validator,withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
        "children": [
          {
            "nodeType": "layout",
            "component": "block",
            "childrenName": "[name,description]",
            "hocs": "[containerRouter]",
            "children": [
              {
                "nodeType": "plugins.string.input",
                "keyName": "name",
                "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
              },
              {
                "nodeType": "plugins.string.input",
                "keyName": "description",
                "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
              }
            ]
          },
          {
            "nodeType": "plugins.object.fieldset",
            "keyName": "info",
            "hocs": "[validator,withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
            "children": [
              {
                "nodeType": "plugins.object.fieldset",
                "keyName": "info2",
                "hocs": "[validator,withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
                "children": [
                  {
                    "nodeType": "layout",
                    "component": "block",
                    "childrenName": "[name2]",
                    "hocs": "[containerRouter]",
                    "children": [
                      {
                        "nodeType": "plugins.string.input",
                        "keyName": "name2",
                        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                      }
                    ]
                  }
                ]
              }
            ]
          }
        ]
      }
    ]
  },
  "info3": {
    "nodeType": "layout",
    "component": "body",
    "childrenName": "[info3]",
    "hocs": "[containerRouter]",
    "children": [
      {
        "nodeType": "layout",
        "component": "block",
        "childrenName": "[info3]",
        "children": [
          {
            "nodeType": "plugins.array.table",
            "keyName": "info3",
            "hocs": "[withTitleAndDescription,withRequest,relation,miniApp,withRoute,query,routeMiniApp,connectId]",
            "children": [
              {
                "nodeType": "layout",
                "component": "block",
                "childrenName": "[name,description]",
                "hocs": "[containerRouter]",
                "children": [
                  {
                    "nodeType": "plugins.string.input",
                    "keyName": "name",
                    "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                  },
                  {
                    "nodeType": "plugins.string.input",
                    "keyName": "description",
                    "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                  }
                ]
              },
              {
                "nodeType": "plugins.object.fieldset",
                "keyName": "info",
                "hocs": "[validator,withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
                "children": [
                  {
                    "nodeType": "plugins.object.fieldset",
                    "keyName": "info2",
                    "hocs": "[validator,withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
                    "children": [
                      {
                        "nodeType": "plugins.string.input",
                        "keyName": "name2",
                        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                      }
                    ]
                  }
                ]
              }
            ]
          }
        ]
      }
    ]
  }
}
`;

exports[`integration with qa-compiler, test object integration 9 1`] = `
{
  "info": {
    "nodeType": "layout",
    "component": "body",
    "childrenName": "[info]",
    "hocs": "[containerRouter]",
    "children": [
      {
        "nodeType": "plugins.object.fieldset",
        "keyName": "info",
        "hocs": "[validator,withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
        "children": [
          {
            "nodeType": "layout",
            "component": "block",
            "childrenName": "[]",
            "hocs": "[containerRouter]",
            "children": [
              {
                "nodeType": "layout",
                "component": "block",
                "childrenName": "[name]",
                "hocs": "[containerRouter]",
                "children": [
                  {
                    "nodeType": "plugins.string.input",
                    "keyName": "name",
                    "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
                  }
                ]
              }
            ]
          }
        ]
      }
    ]
  }
}
`;
